--- a/css/home.css
+++ b/css/home.css
@@ -4,14 +4,14 @@
     align-items: center;
     flex-direction: column;
 
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
-#home #video-background {
+#background-video {
     z-index: -1;
 
     width: 100%;
