--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,22 @@
-html, body {
+body, html {
     margin: 0;
-    overflow-x: hidden;
+    padding: 0;
+    width: 100%;
+    max-width: 100vw;
+    background-color: rgb(248, 252, 255);
+}
+
+#section-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin: 0;
+    width: 100%;
+    height: fit-content;
 }
 
 section {
-    width: 100vh;
+    width: 100%;
     height: 100vh;
     border-bottom: 1px solid #000000;
 }
